--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-id 'com.android.application' version '8.2.1' apply false
+    id 'com.android.application' version '8.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
     id 'com.google.dagger.hilt.android' version '2.50' apply false
+}
+
+ext {
+    activityVersion = '1.8.2'
+    appCompatVersion = '1.4.1'
+    constraintLayoutVersion = '2.1.3'
+    coreTestingVersion = '2.1.0'
+    coroutines = '1.6.0'
+    lifecycleVersion = '2.7.0'
+    materialVersion = '1.5.0'
+    roomVersion = '2.6.1'
+    // testing
+    junitVersion = '4.13.2'
+    espressoVersion = '3.4.0'
+    androidxJunitVersion = '1.1.3'
 }
