--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.10'
@@ -69,6 +70,9 @@ dependencies {
 
     //Hilt
     implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.6'
     kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
 
     // Room components
