--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    viewBinding{
+    /*viewBinding{
         enable = true
-    }
+    }*/
     buildFeatures {
         compose true
         viewBinding true
+        dataBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.10'
