--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.fragment:fragment-ktx:1.5.6'
+    implementation 'androidx.annotation:annotation:1.6.0'
     kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
 
     // Room components
