--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- IOC相关 -->
+        </activity>
+
+        <activity android:name=".room.RoomMainActivity" android:theme="@style/Theme.InventoryApp" />
+
+        <!-- IOC相关 -->
         <activity
             android:name=".ioc.example.ExampleActivity"
             android:exported="false" />
@@ -53,11 +57,6 @@
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
-        <activity android:name=".room.RoomMainActivity" />
-        <activity android:name=".room.codelab.words.WordsActivity" />
-        <activity android:name=".room.codelab.busschedule.BusScheduleActivity" android:theme="@style/Theme.BusSchedule" />
-        <activity android:name=".room.codelab.inventory.InventoryActivity"  android:theme="@style/Theme.InventoryApp" />
-
 
         <activity
             android:name=".navigation.example.navigationsample.NavigationSampleMainActivity"
