Hilt之结构调整

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,25 +37,25 @@
             android:name=".ioc.example.ExampleActivity"
             android:exported="false" />
         <activity
-            android:name=".ioc.hilt.ui.HiltMainActivity"
+            android:name=".ioc.hilt.codelab.logs.ui.HiltMainActivity"
             android:exported="false" />
         <activity
-            android:name=".ioc.dagger.main.DaggerMainActivity"
+            android:name=".ioc.hilt.codelab.login.main.DaggerMainActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name=".ioc.dagger.registration.RegistrationActivity"
+            android:name=".ioc.hilt.codelab.login.registration.RegistrationActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name=".ioc.dagger.login.LoginActivity"
+            android:name=".ioc.hilt.codelab.login.login.LoginActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name=".ioc.dagger.settings.SettingsActivity"
+            android:name=".ioc.hilt.codelab.login.settings.SettingsActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
