添加Product项目并kapt迁移ksp

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,12 @@
         <activity
             android:name="com.xxh.jetpacksample.navigation.NavigationMainActivity"
             android:exported="false" />
+        <activity
+            android:name="com.xxh.jetpacksample.lifecycle.LifecycleMainActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.xxh.jetpacksample.lifecycle.example.persistence.ui.PersistenceActivity"
+            android:exported="false" />
 
     </application>
 
