--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ kapt {
 
 dependencies {
     implementation project(':sunflowerlibrary')
+    implementation project(':todo')
     implementation "androidx.core:core-ktx:$rootProject.ktxVersion"
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
     implementation "androidx.activity:activity-ktx:$rootProject.activityVersion"
