--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,12 @@ ext {
     profileInstallerVersion = '1.3.1'
     tracingVersion = '1.2.0'
     navigationVersion = "2.7.7"
-
+    timberVersion = '4.7.1'
+    swiperefreshlayoutVersion = '1.1.0'
     // testing
     junitVersion = '4.13.2'
-    espressoVersion = '3.4.0'
+    espressoVersion = '3.5.0-alpha04'
+    robolectricVersion = '4.7.3'
     androidxJunitVersion = '1.1.3'
 
    /* coreTestingVersion = '2.1.0'
