--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ dependencyResolutionManagement {
 rootProject.name = "JetpackSample2"
 include ':app'
 include ':sunflowerlibrary'
+include ':todo'
