--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'com.google.dagger.hilt.android' version '2.50' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.7.7' apply false
     id 'com.google.devtools.ksp' version '1.9.23-1.0.20' apply false
+   // id("com.google.gms.google-services") version "4.3.15" apply false
 }
 
 // Define versions in a single place
