--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.compose'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
     id 'androidx.navigation.safeargs.kotlin'
@@ -43,9 +44,9 @@ android {
         viewBinding true
         dataBinding true
     }
-    composeOptions {
+    /*composeOptions {
         kotlinCompilerExtensionVersion '1.5.10'
-    }
+    }*/
     packaging {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
